--- a/web_code/index.html
+++ b/web_code/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgUgncmaHDVonZ9i4pnzUGP746_HEgF5s"></script>
+    <script src="tobe_added"></script>
     <meta charset="UTF-8">
     <title>Parking Lot Searching System - Database Final Project</title>
     <script src="scripts.js"></script>
